# job-agent

./: .env.example  .gitignore  README.md  pyproject.toml
job_agent/: __init__.py  agent.py  config.example.py
job_agent/modules/: applicator.py  cover_letter.py  cv_adapter.py  docx_utils.py  job_matcher.py  notifier.py  tracker.py
job_agent/scrapers/: finn_scraper.py  finn_server.py  nav_scraper.py  nav_server.py
