[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-agent"
version = "1.0.0"
description = "Automated job search agent — scrapes job boards, scores matches, and generates tailored CVs and cover letters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
job-agent = "job_agent.agent:main"

[tool.setuptools.packages.find]
include = ["job_agent*"]
